<?xml version="1.0" encoding="utf-8"?>
<resources>
<string name="next_str">Next</string>
<string name="previous_str">Prev</string>
<string name="port_example_string">default: 6546</string>
<string name="ip_Address_str">IP Address</string>
<string name="location_name_str">Location Name</string>
<string name="cancel_str">Cancel</string>
<string name="save_str">Save</string>
<string name="port_str">Port</string>
<string name="address_str">Address</string>
<string name="name_str">Name</string>
<string name="app_name">mythmote</string>
<string name="settings_menu_str">Settings</string>
<string name="rec_str">Rec</string>
<string name="play_str">Play</string>
<string name="stop_str">Stop</string>
<string name="rw_str">Rew</string>
<string name="ff_str">FF</string>
<string name="up_str">Up</string>
<string name="down_str">Down</string>
<string name="left_str">Left</string>
<string name="right_str">Right</string>
<string name="select_str">Select</string>
<string name="add_location_str">New Location</string>
<string name="add_location_description_str">Create a new frontend location profile</string>
<string name="navigation_str">Navigation</string>
<string name="media_str">Media</string>
<string name="numpad_str">Numbers</string>
<string name="enable_wifi_question_str">WiFi is not enabled and is required for proper application operation. Do you want to turn WiFi on now?</string>
<string name="enable_wifi_str">Enable Wifi</string>
<string name="exit_app_str">Exit mythmote</string>
<string name="enabling_wifi_str">Enabling WiFI...</string>
<string name="ok_str">OK</string>
<string name="no_route_to_host_str">No route to host</string>
<string name="connected_str">Connected</string>
<string name="reconnect_str">Reconnect</string>
<string name="attempting_to_connect_str">Attempting to connect to host</string>
<string name="selected_location_str">Selected Location</string>
<string name="select_location_str">Select Location</string>
<string name="location_list_str">Location List</string>
<string name="error_input_str">Input Error</string>
<string name="error_invalid_name_str">Invalid Name</string>
<string name="error_invalid_address_str">Invalid Address</string>
<string name="error_invalid_port_str">Invalid Port</string>
<string name="delete_location_str">Delete Location</string>
<string name="delete_location_description_str">Delete an existing frontend location profile</string>
<string name="mute_str">Mute</string>
<string name="vol_up_str">Vol +</string>
<string name="vol_down_str">Vol -</string>
<string name="ch_up_str">Ch +</string>
<string name="ch_down_str">Ch -</string>
<string name="ch_return_str">Last</string>
<string name="pause_str">Pause</string>
<string name="menu_str">Menu</string>
<string name="info_str">Info</string>
<string name="no_frontend_locations_defined_str">No frontend locations defined.</string>
<string name="general_preferences_str">General Preferences</string>
<string name="haptic_feedback_enabled_str">Haptic Feedback Enabled</string>
<string name="haptic_feedback_enabled_description_str">Perform haptic feedback on button press</string>
<string name="status_update_interval_str">Status Update Interval</string>
<string name="status_update_interval_description_str">Frequency mythfrontend status is checked in seconds.</string>
<string name="send_wol_str">Send WOL</string>
<string name="send_str">Send</string>
<string name="send_keyboard_input_str">Send keyboard input</string>
<string name="backspace_str">Backspace</string>
<string name="enter_str">Enter</string>
<string name="command_edit_title_str">Command</string>
<string name="command_edit_msg_str">Type the command to send to MythTV</string>
<string name="donate_menu_item_str">Donate</string>
<string name="MAC_example_string">MAC as:"##:##:##:##:##:##"</string>
<string name="MAC_str">MAC</string>
<string name="send_wol_re_str">Send RE WakeOnLan</string>
<string name="send_wol_pj_str">Send PJ WakeOnLan</string>
<string name="wifi_only_str">WiFi Only</string>
<string name="gesture_settings_str">Gesture Settings</string>
<string name="gestures_enabled_str">Gestures Enabled</string>
<string name="multistroke_gestures_str">Multi-stroke Gestures</string>
<string name="multistroke_gestures_description_str">Enable gestures with multiple strokes. EX: cross pattern</string>
<string name="gesture_list_str">Gesture List</string>
<string name="gesture_list_description_str">Edit gestures and their actions</string>
<string name="prompt_gesture_command_str">Mythfront Telnet Command</string>
<string name="error_missing_name_str">You must enter a name</string>
<string name="save_success_str">Gesture saved in %s</string>
<string name="rename_action_str">OK</string>
<string name="cancel_action_str">Cancel</string>
<string name="gestures_loading_str">Loading gestures...</string>
<string name="gestures_empty_str">No gestures</string>
<string name="gestures_activity_str">Gestures</string>
<string name="gestures_rename_str">Rename</string>
<string name="gestures_delete_str">Delete</string>
<string name="gestures_delete_success_str">Gesture deleted</string>
<string name="gestures_rename_title_str">Rename gesture</string>
<string name="gestures_rename_label_str">Gesture name</string>
<string name="gestures_error_loading_str">Could not load %s. Make sure you have storage available.</string>
<string name="button_add_str">Add</string>
<string name="button_remove_str">Remove</string>
<string name="gesture_default_command">key enter</string>
<string name="show_donate_menu_item_str">Show Donate Menu Item</string>
<string name="donate_intent_alert_str">Pressing OK will open the mythmote paypal donation web page.</string>
<string name="guide_str">Guide</string>
<string name="home_str">Home</string>
<string name="live_tv_str">Live TV</string>
<string name="rec_tv_str">Rec TV</string>
<string name="music_str">Music</string>
<string name="videos_str">Video</string>
<string name="status_str">Status</string>
<string name="longpress_action_str">Button Long-Press action</string>
<string name="longpress_action_description_str">Action taken when a button is held down.</string>
<string name="key_repeat_interval_str">Key Repeat Interval</string>
<string name="key_repeat_interval_description_str">Speed of key presses during Long-Press action "Auto Repeat"</string>
<string name="conection_timeout_interval_str">Connection Timeout Interval</string>
<string name="conection_timeout_interval_description_str">How long connection attempts wait before failing.</string>
<string name="keyboard_input_dialog_message">Characters typed into the textbox below will be sent to the connected frontend. Backspace should function as expected. Mythfrontend does not appear to honor the \'key space\' command breaking spacebar functionality.</string>
<string name="done_str">Done</string>
<string name="pref_app_theme">Theme</string>
<string name="pref_app_theme_description">User interface style and colors. ( Requires App Restart )</string>

<string-array name="app_theme_strings">
    <item>Light Sqaure Buttons</item>
	<item>Dark Square Buttons</item>
	<item>Dark Glow Buttons</item>
</string-array>

<string-array name="app_theme_values">
	<item>0</item>
	<item>1</item>
	<item>2</item>
</string-array>

<string-array name="status_Update_Interval_strings">
<item>0 (Off)</item>
<item>1sec</item>
<item>2sec</item>
<item>3sec</item>
<item>4sec</item>
<item>5sec (Recommended)</item>
<item>6sec</item>
<item>7sec</item>
<item>8sec</item>
<item>9sec</item>
<item>10sec</item>
</string-array>
<string-array name="status_Update_Interval_values">
<item>0</item>
<item>1000</item>
<item>2000</item>
<item>3000</item>
<item>4000</item>
<item>5000</item>
<item>6000</item>
<item>7000</item>
<item>8000</item>
<item>9000</item>
<item>10000</item>
</string-array>

<string-array name="connection_timeout_interval_strings">
<item>1sec</item>
<item>2sec</item>
<item>3sec</item>
<item>4sec</item>
<item>5sec (Recommended)</item>
<item>6sec</item>
<item>7sec</item>
<item>8sec</item>
<item>9sec</item>
<item>10sec</item>
</string-array>
<string-array name="connection_timeout_interval_values">
<item>1000</item>
<item>2000</item>
<item>3000</item>
<item>4000</item>
<item>5000</item>
<item>6000</item>
<item>7000</item>
<item>8000</item>
<item>9000</item>
<item>10000</item>
</string-array>

<string-array name="longpress_action_strings">
<item>Auto Repeat</item>
<item>Edit Key-binding</item>
</string-array>
<string-array name="longpress_action_values">
<item>0</item>
<item>1</item>
</string-array>


<string-array name="key_repeat_interval_strings">
<item>100ms (Fast)</item>
<item>200ms</item>
<item>300ms</item>
<item>400ms</item>
<item>500ms (Medium)</item>
<item>600ms</item>
<item>700ms</item>
<item>800ms</item>
<item>900ms</item>
<item>1000ms (Slow)</item>
</string-array>
<string-array name="key_repeat_interval_values">
<item>100</item>
<item>200</item>
<item>300</item>
<item>400</item>
<item>500</item>
<item>600</item>
<item>700</item>
<item>800</item>
<item>900</item>
<item>1000</item>
</string-array>
<string name="quickjump_str">Quick Jump</string>
<string name="keyboard_input_str">Keyboard Input</string>
<string name="clear_str">Clear</string>


</resources>
