<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="wrap_content"
  android:layout_height="wrap_content">
<ScrollView android:id="@+id/ScrollView01" android:layout_width="wrap_content" android:layout_height="wrap_content">

<TableLayout android:id="@+id/TableLayout01" android:layout_width="wrap_content" xmlns:android="http://schemas.android.com/apk/res/android" android:stretchColumns="0,1,2" android:layout_height="wrap_content">
<TableRow android:id="@+id/TableRow01" android:layout_width="wrap_content" android:layout_height="wrap_content">
<Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Home" android:id="@+id/ButtonJump1"/>
<Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Live TV" android:id="@+id/ButtonJump2"/>
<Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Rec TV" android:id="@+id/ButtonJump3"/>
</TableRow>

<TableRow android:id="@+id/TableRow02" android:layout_width="wrap_content" android:layout_height="wrap_content">
<Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Music" android:id="@+id/ButtonJump4"/>
<Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Videos" android:id="@+id/ButtonJump5"/>
<Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:clickable="true" android:id="@+id/ButtonJump6" android:text="Status"/>
</TableRow>

<TableRow android:id="@+id/TableRow03" android:layout_width="wrap_content" android:layout_height="wrap_content">
<TextView android:id="@+id/TextView02" android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
</TableRow>

<TableRow android:id="@+id/TableRow04" android:layout_width="wrap_content" android:layout_height="wrap_content">
<Button android:layout_width="wrap_content" android:layout_height="fill_parent" android:id="@+id/ButtonInfo" android:text="@string/info_str" android:drawableTop="@drawable/info"/>
<Button android:layout_width="wrap_content" android:layout_height="fill_parent" android:bufferType="normal" android:autoText="false" android:drawableTop="@drawable/up" android:text="@string/up_str" android:id="@+id/ButtonUp"/>
<Button android:layout_width="wrap_content" android:layout_height="fill_parent" android:drawableTop="@drawable/guide" android:id="@+id/ButtonGuide" android:text="Guide"/>
</TableRow>

<TableRow android:id="@+id/TableRow05" android:layout_width="wrap_content" android:layout_height="wrap_content">
<Button android:layout_width="wrap_content" android:layout_height="fill_parent" android:drawableTop="@drawable/left" android:text="@string/left_str" android:id="@+id/ButtonLeft"/>
<Button android:layout_width="wrap_content" android:layout_height="fill_parent" android:drawableTop="@drawable/square" android:text="@string/select_str" android:id="@+id/ButtonSelect"/>
<Button android:layout_width="wrap_content" android:layout_height="fill_parent" android:drawableTop="@drawable/right" android:text="@string/right_str" android:id="@+id/ButtonRight"/>
</TableRow>

<TableRow android:id="@+id/TableRow06" android:layout_width="wrap_content" android:layout_height="wrap_content">
<Button android:layout_width="wrap_content" android:layout_height="fill_parent" android:cursorVisible="true" android:id="@+id/ButtonEsc" android:text="@string/cancel_str" android:drawableTop="@drawable/cancel"/>
<Button android:layout_width="wrap_content" android:layout_height="fill_parent" android:drawableTop="@drawable/down" android:text="@string/down_str" android:id="@+id/ButtonDown"/>
<Button android:layout_width="wrap_content" android:layout_height="fill_parent" android:id="@+id/ButtonMenu" android:text="@string/menu_str" android:drawableTop="@drawable/menu"/>
</TableRow>

</TableLayout>
</ScrollView>
</LinearLayout>