<?xml version="1.0" encoding="utf-8"?>
<!--
    This file is part of MythTV Android Frontend

    MythTV Android Frontend is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    MythTV Android Frontend is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with MythTV Android Frontend.  If not, see <http://www.gnu.org/licenses/>.

    This software can be found at <https://github.com/MythTV-Clients/MythTV-Android-Frontend/>
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/EditTextKeyboardInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="1dp"
        android:inputType="text" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3">
        
        <Button
            android:id="@+id/ButtonKeyboardInputDelete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:background="@drawable/mythmote_button_dark_square"
            android:text="@string/backspace_str"
            android:textColor="@color/button_text_color" />
        
        <Button
            android:id="@+id/ButtonEnter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:background="@drawable/mythmote_button_dark_square"
            android:text="@string/enter_str"
            android:textColor="@color/button_text_color" />
        
        <Button
            android:id="@+id/ButtonClear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:background="@drawable/mythmote_button_dark_square"
            android:text="@string/clear_str"
            android:textColor="@color/button_text_color" />

        
        
    </LinearLayout>

</LinearLayout>